--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [alias]
     co = checkout
     g = log --all --graph --decorate --oneline
-    gd = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(yellow)%h%C(reset) %s%C(reset) %C(dim white)<%an>%C(reset) %C(bold blue)%ar%C(reset)%C(bold yellow)%d%C(reset)'
+    log = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(yellow)%h%C(reset) %s%C(reset) %C(dim white)<%an>%C(reset) %C(bold blue)%ar%C(reset)%C(bold yellow)%d%C(reset)'
     amendnoedit = commit --amend --no-edit
