--- a/.gitconfig
+++ b/.gitconfig
@@ -3,3 +3,9 @@
     g = log --all --graph --decorate --oneline
     log = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(yellow)%h%C(reset) %s%C(reset) %C(dim white)<%an>%C(reset) %C(bold blue)%ar%C(reset)%C(bold yellow)%d%C(reset)'
     amendnoedit = commit --amend --no-edit
+    
+    # Delete local and remote tags (usage: git dtag <tag>)
+    dtag = "!f(){ git tag -d \"$1\" && git push origin :refs/tags/\"$1\"; }; f"
+    
+    # Rename local and remote tags
+    rtag = "!f(){ git tag \"$2\" \"$1\" && git dtag \"$1\" && git push --tags; }; f"
